# apac

./: .gitignore  APAC_USAGE  CMakeLists.txt  README.md
default/: lock.alock  settings.toml
default/modules/: example_modules.amod
doc/: conf.py  index.rst  make.bat
modules/: CMakeLists.txt
modules/android/shell/: reverse-tcp.c
res/: help_message.txt
scripts/: decode.asc
source/: CMakeLists.txt  api.h  backend_sp.c  backend_sp.h  backend_space.c  backend_space.h  conf.c  conf.h  cyclic_hw.c  cyclic_hw.h  debug_extra.h  default.h  doubly_int.c  doubly_int.h  dyn_loader.c  dyn_loader.h  fast_cache.c  fast_cache.h  inner.c  inner.h  layer.c  layer.h  locker.c  locker.h  main_thread.c  memctrlext.c  memctrlext.h  ocl_driver.c  ocl_driver.h  ocl_hardware.c  ocl_hardware.h  rt.c  rt.h  session.c  session.h  status.h  strhandler.c  strhandler.h  strplus.c  strplus.h  (+8 more)
source/echo/: core.h  fmt.h  int.c
source/embed/: user.c  user.h
source/host/: cache.h
source/pkg/: heart.c  manager.h
source/pkzip/: pk.h
source/pool/: gov.h  sched_ctrl.c  superscalar.c
source/sched/: CMakeLists.txt  affinity.c  gov.h  handler.c  orchestrator.c  sched_ctrl.c  spin_lock.c  spin_lock.h  superscalar.c  worker_thread.c
source/storage/: CMakeLists.txt  async.c  async.h  async_io.c  async_io.h  dirhandler.h  dirio.c  dirio.h  dirio_compon.c  fformat.c  fgetset.c  fhandler.h  fio.c  fio.h  fio_regrw.c  flock.c  flock.h  io_native.c  io_native.h  tree.c  tree.h  tree_stg.c  tree_stg.h
source/storage/extio/: advise.c  advise.h  flock.c  flock.h  stream_mime.c  stream_mime.h
source/thread/: ctx_now.c  ctx_now.h  sleep.c  sleep.h
source/user/: CMakeLists.txt  cli.c  cli.h  cli_clash.c  cli_clash.h  cli_extra.c  line_format.c  line_format.h  selector.c  selector.h  usage.c  usage.h
